[package]
name = "recase"
version = "0.1.1"
edition = "2021"
description = "Changes the convention case of input text."
license = "BSD-2-Clause"
readme = "README.md"
authors = ["galatea21"]
repository = "https://github.com/galatea21/recase"
homepage = "https://github.com/galatea21/recase"
documentation = "https://docs.rs/recase"
keywords = ["recase", "text", "case", "convention"]
categories = ["text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.9.0"
