[package]
name = "recase"
version = "0.4.0"
edition = "2021"
description = "Changes the convention case of input text."
license = "BSD-2-Clause"
readme = "README.md"
authors = ["ThiDinh21"]
repository = "https://github.com/ThiDinh21/recase"
homepage = "https://github.com/ThiDinh21/recase"
documentation = "https://docs.rs/recase"
keywords = ["recase", "text", "case", "convention"]
categories = ["text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.12.0"
